Ajout d'un rappel perso et fix dimanche

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "CHANNEL_ID": "963784928355565638",
   "ROLE_ID": "963788628222431333",
-  "MESSAGE_ID": "963804410931191879"
+  "MESSAGE_ID": "963804410931191879",
+  "PAM_ID": "217200239264661504"
 }
